--- a/main.css
+++ b/main.css
@@ -19,6 +19,7 @@
 
 html, body {
     margin: 0;
+    overflow: hidden;
 }
 
 body {
@@ -36,6 +37,7 @@ canvas {
     top: 0;
     left: 0;
     background-color: #eee;
+    opacity: 0.75;
     display: inline-block;
     padding: 10px;
 }
